--- a/package.json
+++ b/package.json
@@ -1,69 +1,150 @@
-{
-  "name": "start-webapck-template",
-  "version": "2.0.0",
-  "description": "Start template for generate css, js and html file",
-  "main": "src/index.js",
-  "scripts": {
-    "dev": "webpack --mode development && prettier --print-width=120 --parser html --write dist/*.html",
-    "build": "webpack --mode production",
-    "start": "webpack-dev-server --mode development --open",
-    "lint": "eslint --ext .js, --ignore-path .gitignore ."
-  },
-  "devDependencies": {
-    "@babel/core": "^7.5.5",
-    "babel-loader": "^8.0.6",
-    "clean-webpack-plugin": "^3.0.0",
-    "copy-webpack-plugin": "^5.0.4",
-    "css-loader": "^3.1.0",
-    "cssnano": "^4.1.10",
-    "eslint": "^6.8.0",
-    "eslint-config-airbnb-base": "^14.2.1",
-    "eslint-loader": "^2.2.1",
-    "html-webpack-plugin": "^3.2.0",
-    "mini-css-extract-plugin": "^0.8.0",
-    "postcss-loader": "^3.0.0",
-    "prettier": "^1.18.2",
-    "pug": "^2.0.4",
-    "pug-loader": "^2.4.0",
-    "pug-plain-loader": "^1.1.0",
-    "sass-loader": "^7.1.0",
-    "source-map-loader": "^1.0.0",
-    "terser-webpack-plugin": "^1.4.5",
-    "vue-loader": "^15.9.6",
-    "vue-template-compiler": "^2.6.12",
-    "webpack": "^4.38.0",
-    "webpack-bundle-analyzer": "^4.8.0",
-    "webpack-cli": "^3.3.6",
-    "webpack-dev-server": "^3.7.2"
-  },
-  "dependencies": {
-    "@fancyapps/ui": "^4.0.31",
-    "@maxflex/v-number": "^1.0.9",
-    "@vkontakte/superappkit": "^1.60.0",
-    "apexcharts": "3.54.1",
-    "autoprefixer": "^9.6.1",
-    "axios": "^0.21.4",
-    "axios-jsonp-pro": "^1.1.8",
-    "buffer-json": "^2.0.0",
-    "cache-loader": "^4.1.0",
-    "Datepicker.js": "^0.1.1",
-    "eslint-plugin-import": "^2.22.1",
-    "html2canvas": "1.3.3",
-    "imask": "^6.6.3",
-    "js-cookie": "^3.0.1",
-    "jspdf": "2.5.1",
-    "nouislider": "^14.6.3",
-    "nvm": "^0.0.4",
-    "pdfmake": "0.2.7",
-    "sass": "^1.80.4",
-    "scroll-behavior-polyfill": "^2.0.13",
-    "swiper": "^6.4.5",
-    "vanilla-calendar-pro": "^2.9.10",
-    "vue": "^2.6.12",
-    "vue-apexcharts": "1.6.2",
-    "vue-axios": "^3.2.2",
-    "vue-slider-component": "^3.2.20",
-    "vue2-dropzone": "^3.6.0",
-    "vuex": "^3.6.2"
-  }
-}
+ exportToPDF() {
+      const px = (value) => value *0.75;
+      pdfMake.fonts = {
+        Roboto: {
+          normal: 'Roboto-Regular.ttf',
+          bold: 'Roboto-Medium.ttf',
+          italics: 'Roboto-Italic.ttf',
+          bolditalics: 'Roboto-MediumItalic.ttf'
+        }
+      };
+      const ri = this.repayment_information;
+      const hasEarlierMonth = this.repayment_information&&this.repayment_information.if_earlier_month > 0;
+      // Подбираем высоту для блока данные о кредите в зависмости от того есть предложене раньше на или нет
+      const repaymentHeight = hasEarlierMonth ? 270 : 255;
+      const docDefinition = {
+        pageSize: 'A4',
+        pageMargins: [40, 30, 40, 40], //// [left, top, right, bottom]
+        
+        
+        
+        
+        content: [
+          {
+            columns: [
+              {
+                stack: [
+                  { text: 'Калькулятор', style: 'headerTitle' },
+                  {
+                    text: 'досрочного погашения',
+                    background: '#daff01',
+                    style: 'headerTitleHighlighted'
+                  },
+                  { text: 'ипотеки', style: 'headerTitle' }
+                ]
+              },
+              {
+                image: 'logo',
+                width: 104,
+                alignment: 'right'
+              }
+            ],
+            margin: [0, 0, 0, this.converPx(15)]
+          },
+          {
+            columns: [
+              {
+                text: `Расчет платежей от ${this.currentDate}`,
+                style: 'metaText',
+                width: '*'
+              },
+              {
+                text: 'Сделать новый расчет',
+                link: 'https://xn--h1alcedd.xn--d1aqf.xn--p1ai/calculators/kalkulyator-dosrochnogo-pogasheniya-ipoteki/',
+                style: 'link',
+                width: 'auto',
+                alignment: 'right'
+              }
+            ],
+            margin: [0, 0, 0, this.converPx(16)]
+          },
+
+          this.createInfoBlock('Расчет носит справочный характер и не может быть основанием для совершения юридически значимых действий'),
+
+          this.createSectionBox(this.createMortgageSection(), 290),
+//          this.createSectionBox(this.createRepaymentSection(), 255),
+          this.createSectionBox(this.createRepaymentSection(), repaymentHeight),
+          (this.holidays_term && this.holidays_term !== 0)
+            ? this.createSectionBox(this.createHolidaysSection(), 160)
+            : {},
+
+          // Отступ после каникул
+          (this.holidays_term && this.holidays_term !== 0)
+            ? { text: '', margin: [0, 80, 0, 0] }
+            : {},
+
+          // График платежей
+          {
+            stack: [
+              { text: 'График платежей', style: 'sheduleTitle' },
+              this.createSheduleBlocks()
+            ],
+            margin: [16, 0, 0, 16]
+          }
+        ],
+
+
+
+
+        images: {
+          logo: logoBase64,
+          iconSymbol: iconSymbolBase64
+        },
+
+        styles: {
+          headerTitle: { fontSize: 16, bold: true, color: '#252628' },
+          headerTitleHighlighted: { fontSize: 16, bold: true, color: '#252628' },
+          metaText: { fontSize: 12, color: '#252628' },
+          link: { fontSize: 12, color: '#252628', decoration: 'underline' },
+          infoText: { fontSize: 12, color: '#252628' },
+          sectionTitle: { fontSize: 16, bold: true, color: '#252628', margin: [0, 0, 0, 16] },
+          label: { fontSize: 12, bold: true, color: '#6d6d6d', margin: [0, 0, 0, 4] },
+          mortgageValue: { fontSize: 12, color: '#252628' },
+          repaymentValue: { fontSize: 12, color: '#252628', margin: [0, 0, 0, 0] },
+          repaymentValueGreen: { fontSize: 12, color: '#699b12', margin: [0, 0, 0, 0] },
+          valueInline: { fontSize: 12, color: '#252628' },
+          valueNoMargin: { fontSize: 12, color: '#252628', margin: [0, 0, 0, 2] },
+
+          // Стили для графика платежей
+          sheduleTitle: {
+            fontSize: 16,
+            bold: true,
+            color: '#252628',
+            margin: [0, 0, 0, 16]
+          },
+          sheduleItemLabel: {
+            fontSize: 10,
+            color: '#6d6d6d',
+            margin: [0, 0, 0, 2]
+          },
+          sheduleItemValue: {
+            fontSize: 11,
+            color: '#252628'
+          },
+          holidayBadge: {
+            fontSize: 10,
+            color: '#fff',
+            background: '#252628',
+            padding: [2, 8, 2, 8],
+            margin: [0, 0, 12, 0]
+          },
+          holidayValue: {
+            fontSize: 11,
+            color: '#252628',
+            margin: [0, 0, 0, 0]
+          },
+          holidayBadgeText: {
+            fontSize: this.converPx(12),
+            color: '#fff',
+            margin: [0, 0, 0, 0] // отступы задаются вручную
+          }
+        },
+
+        defaultStyle: {
+          font: 'Roboto',
+          fontSize: 10
+        }
+      };
+
+      pdfMake.createPdf(docDefinition).download('расчёт-ипотеки.pdf');
+    },
